--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "link-grammars": "node build/ext.js link -t grammar"
   },
   "dependencies": {
+    "@gitpod/supervisor-api-grpc": "ak-remote-terminal-channel",
+    "@grpc/grpc-js": "latest",
     "applicationinsights": "1.0.8",
     "chokidar": "3.5.0",
     "graceful-fs": "4.2.3",
@@ -101,6 +103,7 @@
     "@types/copy-webpack-plugin": "^6.0.3",
     "@types/cssnano": "^4.0.0",
     "@types/debug": "4.1.5",
+    "@types/google-protobuf": "^3.7.4",
     "@types/graceful-fs": "4.1.2",
     "@types/gulp-postcss": "^8.0.0",
     "@types/http-proxy-agent": "^2.0.1",
