--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "electron-rebuild": "electron-rebuild --arch=arm64 --force --version=11.0.2"
   },
   "dependencies": {
+    "@gitpod/supervisor-api-grpc": "ak-remote-terminal-channel",
+    "@grpc/grpc-js": "latest",
     "applicationinsights": "1.0.8",
     "chokidar": "3.4.3",
     "graceful-fs": "4.2.3",
@@ -86,6 +88,7 @@
     "@types/chokidar": "2.1.3",
     "@types/cookie": "^0.3.3",
     "@types/debug": "^4.1.5",
+    "@types/google-protobuf": "^3.7.4",
     "@types/graceful-fs": "4.1.2",
     "@types/http-proxy-agent": "^2.0.1",
     "@types/keytar": "^4.4.0",
