--- a/remote/package.json
+++ b/remote/package.json
@@ -2,6 +2,8 @@
   "name": "vscode-reh",
   "version": "0.0.0",
   "dependencies": {
+    "@gitpod/supervisor-api-grpc": "ak-remote-terminal-channel",
+    "@grpc/grpc-js": "latest",
     "applicationinsights": "1.0.8",
     "chokidar": "3.4.3",
     "cookie": "^0.4.0",
@@ -18,9 +20,9 @@
     "vscode-nsfw": "1.2.9",
     "vscode-oniguruma": "1.3.1",
     "vscode-proxy-agent": "^0.5.2",
+    "vscode-regexpp": "^3.1.0",
     "vscode-ripgrep": "^1.11.1",
     "vscode-textmate": "5.2.0",
-    "vscode-regexpp": "^3.1.0",
     "xterm": "4.10.0-beta.4",
     "xterm-addon-search": "0.8.0-beta.3",
     "xterm-addon-unicode11": "0.3.0-beta.3",
