--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "electron-rebuild": "electron-rebuild --arch=arm64 --force --version=11.0.2"
   },
   "dependencies": {
-    "@gitpod/supervisor-api-grpc": "ak-remote-terminal-channel",
+    "@gitpod/supervisor-api-grpc": "master",
     "@grpc/grpc-js": "latest",
     "applicationinsights": "1.0.8",
     "chokidar": "3.4.3",
@@ -83,7 +83,7 @@
   },
   "devDependencies": {
     "7zip": "0.0.6",
-    "@gitpod/gitpod-protocol": "^0.1.5-ak-fix-code.7",
+    "@gitpod/gitpod-protocol": "master",
     "@types/applicationinsights": "0.20.0",
     "@types/chokidar": "2.1.3",
     "@types/cookie": "^0.3.3",
