--- a/remote/package.json
+++ b/remote/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-reh",
   "version": "0.0.0",
   "dependencies": {
-    "@gitpod/supervisor-api-grpc": "ak-remote-terminal-channel",
+    "@gitpod/supervisor-api-grpc": "master",
     "@grpc/grpc-js": "latest",
     "applicationinsights": "1.0.8",
     "chokidar": "3.4.3",
