--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,9 @@
 {
 	"name": "Code - OSS",
 
-	// Image contents: https://github.com/microsoft/vscode-dev-containers/blob/master/repository-containers/images/github.com/microsoft/vscode/.devcontainer/base.Dockerfile
-	"image": "mcr.microsoft.com/vscode/devcontainers/repos/microsoft/vscode:branch-main",
-	"overrideCommand": false,
-	"runArgs": [ "--init", "--security-opt", "seccomp=unconfined", "--shm-size=1g"],
+	"build":{
+		"dockerfile": ".gitpod.Dockerfile"
+	},
 
 	// VS Code extensions and settings
 	"customizations": {
@@ -19,24 +18,6 @@
 			]
 		}
 	},
-
-	// noVNC, VNC
-	"forwardPorts": [6080, 5901],
-	"portsAttributes": {
-		"6080": {
-			"label": "VNC web client (noVNC)",
-			"onAutoForward": "silent"
-		},
-		"5901": {
-			"label": "VNC TCP port",
-			"onAutoForward": "silent"
-		}
-	},
-
-	// Optionally loads a cached yarn install for the repo
-	"postCreateCommand": ".devcontainer/cache/restore-diff.sh",
-
-	"remoteUser": "node",
 
 	"hostRequirements": {
 		"memory": "9gb"
