delete gitpod extensions

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -635,9 +635,7 @@
 		},
 		{
 			"files": [
-				"build/gulpfile.gitpod.js",
-				"src/vs/gitpod/*",
-				"extensions/gitpod*/**"
+				"src/vs/gitpod/*"
 			],
 			"rules": {
 				"header/header": [
