--- a/extensions/gitpod-shared/package.json
+++ b/extensions/gitpod-shared/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@gitpod/gitpod-protocol": "^0.1.5-main.6340",
-    "@gitpod/supervisor-api-grpc": "^0.1.5-jp-on-open.2",
+    "@gitpod/supervisor-api-grpc": "jp-on-open",
     "bufferutil": "^4.0.1",
     "js-yaml": "^4.1.0",
     "reconnecting-websocket": "^4.4.0",
