--- a/extensions/gitpod-shared/package.json
+++ b/extensions/gitpod-shared/package.json
@@ -26,8 +26,8 @@
     "svelte-preprocess": "^4.0.0"
   },
   "dependencies": {
-    "@gitpod/gitpod-protocol": "main",
-    "@gitpod/supervisor-api-grpc": "jp-on-open",
+    "@gitpod/gitpod-protocol": "^0.1.5-main.6340",
+    "@gitpod/supervisor-api-grpc": "^0.1.5-jp-on-open.2",
     "bufferutil": "^4.0.1",
     "js-yaml": "^4.1.0",
     "reconnecting-websocket": "^4.4.0",
@@ -37,6 +37,7 @@
     "ws": "^7.4.6",
     "yaml": "^1.10.0",
     "@vscode/codicons": "^0.0.31",
-    "@vscode/webview-ui-toolkit": "^1.0.0"
+    "@vscode/webview-ui-toolkit": "^1.0.0",
+    "react": ">=16.9.0"
   }
 }
