--- a/extensions/package.json
+++ b/extensions/package.json
@@ -9,12 +9,14 @@
   },
   "scripts": {
     "postinstall": "node ./postinstall.mjs",
-    "compile": "yarn build:ts && yarn build:gitpod-web",
+    "compile": "yarn build:ts && yarn build:gitpod-web && yarn build:gitpod-remote",
     "watch": "npm-run-all -lp watch:ts watch:gitpod-web",
     "build:ts": "../node_modules/.bin/tsc -b",
     "watch:ts": "../node_modules/.bin/tsc -b -w",
     "build:gitpod-web": "yarn --cwd gitpod-web build:webview",
-    "watch:gitpod-web": "yarn --cwd gitpod-web watch:webview"
+    "watch:gitpod-web": "yarn --cwd gitpod-web watch:webview",
+    "build:gitpod-remote": "yarn --cwd gitpod-remote vscode:prepublish",
+    "watch:gitpod-remote": "yarn --cwd gitpod-remote watch"
   },
   "devDependencies": {
     "@parcel/watcher": "2.1.0",
