--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "native-is-elevated": "0.4.3",
     "native-keymap": "3.3.2",
     "native-watchdog": "1.4.1",
+    "node-ovsx-sign": "latest",
     "node-pty": "0.11.0-beta29",
     "spdlog": "^0.13.0",
     "tas-client-umd": "0.1.6",
